force-app/main/default/objects/Reassignment_History__c/Reassignment_History__c.object-meta.xml
<CustomObject>
    <description>Lead reassignment audit</description>
    <label>Reassignment History</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Reassignment History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reassignment Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>