force-app/main/default/objects/Reassignment_History__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned By Reassignments</relationshipLabel>
    <relationshipName>Assigned_By_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>