force-app/main/default/objects/Reassignment_History__c/fields/Entry_Status__c.field-meta.xml
<CustomField>
    <fullName>Entry_Status__c</fullName>
    <label>Entry Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>