force-app/main/default/objects/Reassignment_History__c/fields/Exit_Status__c.field-meta.xml
<CustomField>
    <fullName>Exit_Status__c</fullName>
    <label>Exit Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>