force-app/main/default/objects/Reassignment_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Reassignment History</relationshipLabel>
    <relationshipName>Reassignment_History</relationshipName>
    <type>Lookup</type>
</CustomField>