force-app/main/default/objects/Reassignment_History__c/fields/Lead_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Lead_Access_Level__c</fullName>
    <label>Lead Access Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>