force-app/main/default/objects/Reassignment_History__c/fields/Lead_Status_At_Change__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_At_Change__c</fullName>
    <label>Lead Status At Change</label>
    <length>100</length>
    <type>Text</type>
</CustomField>