force-app/main/default/objects/Reassignment_History__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>New Owned Reassignments</relationshipLabel>
    <relationshipName>New_Owned_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>