force-app/main/default/objects/Reassignment_History__c/fields/Old_Owner__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Old Owned Reassignments</relationshipLabel>
    <relationshipName>Old_Owned_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>