force-app/main/default/objects/Reassignment_History__c/fields/Ownership_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Duration_Hours__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Ownership_End_Date__c)), NOT(ISBLANK(Ownership_Start_Date__c))), (Ownership_End_Date__c - Ownership_Start_Date__c) * 24, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>