force-app/main/default/objects/Reassignment_History__c/fields/Ownership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ownership_End_Date__c</fullName>
    <label>Ownership End Date</label>
    <type>DateTime</type>
</CustomField>