force-app/main/default/objects/Reassignment_History__c/fields/Ownership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Start_Date__c</fullName>
    <label>Ownership Start Date</label>
    <type>DateTime</type>
</CustomField>