force-app/main/default/objects/Reassignment_History__c/fields/Previous_History__c.field-meta.xml
<CustomField>
    <fullName>Previous_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous History</label>
    <referenceTo>Reassignment_History__c</referenceTo>
    <relationshipLabel>Next History</relationshipLabel>
    <relationshipName>Next_History</relationshipName>
    <type>Lookup</type>
</CustomField>