force-app/main/default/objects/Reassignment_History__c/fields/Reassigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Date__c</fullName>
    <label>Reassigned Date</label>
    <type>DateTime</type>
</CustomField>