force-app/main/default/objects/Reassignment_History__c/fields/Reassignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Initial Assignment</fullName>
            </value>
            <value>
                <fullName>Status Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>