force-app/main/default/objects/Reassignment_History__c/fields/Share_Followups__c.field-meta.xml
<CustomField>
    <fullName>Share_Followups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Followups</label>
    <type>Checkbox</type>
</CustomField>