force-app/main/default/objects/Reassignment_History__c/fields/Share_Site_Visits__c.field-meta.xml
<CustomField>
    <fullName>Share_Site_Visits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Site Visits</label>
    <type>Checkbox</type>
</CustomField>