force-app/main/default/objects/Reassignment_History__c/fields/Temp_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Temp_Expiry__c</fullName>
    <label>Temp Expiry</label>
    <type>Date</type>
</CustomField>