force-app/main/default/objects/Reassignment_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reassigned_Date__c</columns>
    <columns>Temp_Expiry__c</columns>
    <columns>Status__c</columns>
    <columns>Reason__c</columns>
    <columns>Reassignment_Type__c</columns>
    <columns>Old_Owner__c</columns>
    <columns>New_Owner__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>